Upload trained model. Modify filenames in code

--- a/RNN_train_test/extract_data.ipynb
+++ b/RNN_train_test/extract_data.ipynb
@@ -30,7 +30,7 @@
     "        self.nstep = ii.shape[0]\n",
     "\n",
     "def readdata_file_addp(caseid, file_ind):\n",
-    "    path='/n/kuangdss01/users/qiyusong/SAM_output/OUT_STAT/'\n",
+    "    path = # SAM data directory\n",
     "    nT = 26\n",
     "    nQ = 14\n",
     "    dataset = nc.Dataset(path+f'RCE_randmultsine_{caseid}{str(file_ind)}.nc', 'r')\n",
