--- a/RNN_train_test/extract_data.ipynb
+++ b/RNN_train_test/extract_data.ipynb
@@ -105,7 +105,7 @@
     "        Y = np.concatenate((Y, LOGP), axis=1)\n",
     "        Y_weighted = np.concatenate((Y_weighted, LOGP), axis=1)\n",
     "        print(f'Saving {experiments[i]}...')\n",
-    "        np.savez_compressed(f'/n/kuangdss01/users/qiyusong/SAM_RNN/data/{experiments[i]}_256_addp.npz',\n",
+    "        np.savez_compressed(f'../data/{experiments[i]}_256_addp.npz',\n",
     "            input=U, target=Y,\n",
     "            input_weighted=U_weighted, target_weighted=Y_weighted,\n",
     "            experiment=experiments[i]\n",
@@ -261,7 +261,7 @@
     "                Y = np.concatenate((Y, LOGP), axis=1)\n",
     "                Y_weighted = np.concatenate((Y_weighted, LOGP), axis=1)\n",
     "                print(f'Saving {caseid}...')\n",
-    "                np.savez_compressed(f'/n/kuangdss01/users/qiyusong/SAM_RNN/data/{caseid}addp.npz',\n",
+    "                np.savez_compressed(f'../data/{caseid}addp.npz',\n",
     "                    input=U, target=Y,\n",
     "                    input_weighted=U_weighted, target_weighted=Y_weighted,\n",
     "                    experiment=caseid\n",
