update corrupted data files

--- a/RNN_train_test/check_results_addp.ipynb
+++ b/RNN_train_test/check_results_addp.ipynb
@@ -178,7 +178,7 @@
       "(64, 64)\n",
       "(64, 40)\n",
       "(41, 64)\n",
-      "odict_keys(['h0', 'inputs_val_rand', 'targets_val_rand', 'inputs_val_wave', 'targets_val_wave', 'input_layer_linear.weight', 'input_layer_1.weight', 'input_layer_1.bias', 'input_layer_2.weight', 'input_layer_2.bias', 'input_layer_3.weight', 'input_layer_3.bias', 'output_layer.weight'])\n",
+      "odict_keys(['h0', 'input_layer_linear.weight', 'input_layer_1.weight', 'input_layer_1.bias', 'input_layer_2.weight', 'input_layer_2.bias', 'input_layer_3.weight', 'input_layer_3.bias', 'output_layer.weight'])\n",
       "odict_keys(['h0', 'inputs_val', 'targets_val', 'input_layer_linear.weight', 'input_layer_1.weight', 'input_layer_1.bias', 'input_layer_2.weight', 'input_layer_2.bias', 'input_layer_3.weight', 'input_layer_3.bias', 'output_layer.weight'])\n",
       "input_layer_linear.weight\n",
       "input_layer_1.weight\n",
@@ -200,8 +200,7 @@
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
       "/n/holylfs04/LABS/kuang_lab/Lab/qiyusong/mamba_envs/pt2.0.1_cuda11.8/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/logger_connector/logger_connector.py:75: Starting from v1.9.0, `tensorboardX` has been removed as a dependency of the `pytorch_lightning` package, due to potential conflicts with other packages in the ML ecosystem. For this reason, `logger=True` will use `CSVLogger` as the default logger, unless the `tensorboard` or `tensorboardX` packages are found. Please `pip install lightning[extra]` or one of them to enable TensorBoard support by default\n",
-      "/n/holylfs04/LABS/kuang_lab/Lab/qiyusong/mamba_envs/pt2.0.1_cuda11.8/lib/python3.10/site-packages/lightning_fabric/plugins/environments/slurm.py:204: The `srun` command is available on your system but is not used. HINT: If your intention is to run Lightning on SLURM, prepend your python command with `srun` like so: srun python /n/holylfs04/LABS/kuang_lab/Lab/qiyusong/mamba_envs/ ...\n",
-      "Missing logger folder: /net/kuangdss01/kuangdss01/share_root/users/qiyusong/RNNpaper/RNN_train_test/lightning_logs\n"
+      "/n/holylfs04/LABS/kuang_lab/Lab/qiyusong/mamba_envs/pt2.0.1_cuda11.8/lib/python3.10/site-packages/lightning_fabric/plugins/environments/slurm.py:204: The `srun` command is available on your system but is not used. HINT: If your intention is to run Lightning on SLURM, prepend your python command with `srun` like so: srun python /n/holylfs04/LABS/kuang_lab/Lab/qiyusong/mamba_envs/ ...\n"
      ]
     },
     {
@@ -337,16 +336,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "inputs_valid.shape = torch.Size([14400, 30, 40])\n",
-      "(64, 64)\n",
-      "(64, 40)\n",
-      "(41, 64)\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -360,7 +349,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "odict_keys(['h0', 'inputs_val_rand', 'targets_val_rand', 'inputs_val_wave', 'targets_val_wave', 'input_layer_linear.weight', 'input_layer_1.weight', 'input_layer_1.bias', 'input_layer_2.weight', 'input_layer_2.bias', 'input_layer_3.weight', 'input_layer_3.bias', 'output_layer.weight'])\n",
+      "inputs_valid.shape = torch.Size([14400, 30, 40])\n",
+      "(64, 64)\n",
+      "(64, 40)\n",
+      "(41, 64)\n",
+      "odict_keys(['h0', 'input_layer_linear.weight', 'input_layer_1.weight', 'input_layer_1.bias', 'input_layer_2.weight', 'input_layer_2.bias', 'input_layer_3.weight', 'input_layer_3.bias', 'output_layer.weight'])\n",
       "odict_keys(['h0', 'inputs_val', 'targets_val', 'input_layer_linear.weight', 'input_layer_1.weight', 'input_layer_1.bias', 'input_layer_2.weight', 'input_layer_2.bias', 'input_layer_3.weight', 'input_layer_3.bias', 'output_layer.weight'])\n",
       "input_layer_linear.weight\n",
       "input_layer_1.weight\n",
@@ -506,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "44f2641a",
    "metadata": {},
    "outputs": [
@@ -591,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8e12e4e3",
    "metadata": {},
    "outputs": [
